@startuml
class Role {
- id
- name
}

class Film {
- id
- name
- rank
- imagePath
}

class Person {
- id
- name
}

class Genre {
- id
- name
}

Role "  *  " -- "  1  " Person
Role "  *  " -- "  1  " Film
Genre "  *  " -- "  *  " Film

Film "* directedFilms" - "1 director" Person :"                                    "
hide circle
@enduml